fix security config cors and options